# meta_vlas

./: .gitignore  README.md  download_libero_to_scratch.sh  pyproject.toml  requirements.txt
examples/libero/: main.py
meta_libero/: build_faiss_index_incremental.py  build_unified_faiss_index.py  fix_checkpoint.py  jupyter_server_vscode.sh  libero_dataset.py  nn_fetcher.py  train_libero.ipynb  utils.py
meta_libero/scripts/: eval_tasks.py  finetune_single_task.py  marco.py
scripts/: serve_policy.py  train.py
src/openpi/: transforms.py
src/openpi/models/: pi0.py
src/openpi/policies/: libero_policy.py  policy_config.py
src/openpi/shared/: download.py
src/openpi/training/: config.py  data_loader.py
